# TodoCompanion

./: .gitignore  README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_notes_todos.sql
backend/src/: db_handler.rs  endpoints.rs  graph_communicator.rs  logic.rs  main.rs  models.rs
frontend/: package-lock.json
