[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
hyper = "1.1.0"
poem = "2.0"
poem-openapi = { version = "4.0", features = ["swagger-ui"] }
reqwest = {version = "0.11.23", features = ["json"]}
serde = "1.0.195"
tokio = { version = "1", features = ["full"] }
