[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.11.1"
graph-rs-sdk = "1.1.3"
poem = "2.0"
poem-openapi = { version = "4.0", features = ["swagger-ui"] }
serde = "1.0.195"
serde_json = "1.0.112"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
